2006-06-15  Vivek Lakshmanan  <vivekl@redhat.com>

	* gnu/testlet/gnu/javax/crypto/jce/TestOfCipherEngineInit.java
	(testInitWithParameterSpec): More comments and look for 
	InvalidAlgorithmParameterException instead of InvalidKeyException.

2006-06-15  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/javax/swing/JRadioButton/isFocusable.java: New test.

2006-06-15  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/javax/swing/JCheckBox/isFocusable.java: New test.

2006-06-15  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/javax/swing/JToggleButton/isFocusable.java: New test.

2006-06-15  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/javax/swing/JButton/constructors.java
	(testConstructor1): Added 'focusable' test.
	(testConstructor2): Added 'focusable' test.
	(testConstructor4): Added 'focusable' test.
	(testConstructor6): Added 'focusable' test.
	(testConstructor9): Added 'focusable' test.

2006-06-15  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalScrollButton/isFocusable.java: New test.

2006-06-15  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/javax/swing/plaf/basic/BasicArrowButton/isFocusable.java: New test.

2006-06-15  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/javax/swing/JRadioButtonMenuItem/isFocusable.java: New test.

2006-06-15  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/javax/swing/JCheckBoxMenuItem/constructors.java
	(testConstructor1): Added 'focusable' check.
	(testConstructor2): Added 'focusable' check.
	(testConstructor4): Added 'focusable' check.
	(testConstructor6): Added 'focusable' check.
	(testConstructor8): Added 'focusable' check.
	(testConstructor10): Added 'focusable' check.
	(testConstructor12): Added 'focusable' check.

2006-06-15  Vivek Lakshmanan  <vivekl@redhat.com>

	* gnu/testlet/gnu/javax/crypto/jce/TestOfCipherEngineInit.java: Add
	proper tag information.
	(testInitWithParameterSpec): New method.
	(test): Add call to new test for init with null AlgorithmParameterSpec.
